@@ -1,9 +1,13 @@
 package nl.homeserver.energie.meterstand;
 
-import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.groupingBy;
-import static java.util.stream.Collectors.toList;
-import static org.apache.commons.lang3.builder.ToStringStyle.SHORT_PREFIX_STYLE;
+import lombok.AllArgsConstructor;
+import nl.homeserver.cache.CacheService;
+import nl.homeserver.energie.verbruikkosten.VerbruikKostenOverzichtService;
+import nl.homeserver.housekeeping.HousekeepingSchedule;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+import org.springframework.scheduling.annotation.Scheduled;
+import org.springframework.stereotype.Service;
 
 import java.time.Clock;
 import java.time.LocalDate;
@@ -11,16 +15,8 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 
-import org.apache.commons.lang3.builder.ReflectionToStringBuilder;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import org.springframework.scheduling.annotation.Scheduled;
-import org.springframework.stereotype.Service;
-
-import lombok.AllArgsConstructor;
-import nl.homeserver.cache.CacheService;
-import nl.homeserver.energie.verbruikkosten.VerbruikKostenOverzichtService;
-import nl.homeserver.housekeeping.HousekeepingSchedule;
+import static java.util.Comparator.comparing;
+import static java.util.stream.Collectors.groupingBy;
 
 @Service
 @AllArgsConstructor
@@ -50,7 +46,7 @@ class MeterstandHousekeeping {
         return meterstandRepository.findDatesBeforeToDateWithMoreRowsThan(today.minusMonths(NUMBER_OF_MONTHS_TO_LOOK_BACK), today, MAX_NR_OF_ROWS_PER_DAY)
                                    .stream()
                                    .map(timestamp -> timestamp.toLocalDateTime().toLocalDate())
-                                   .collect(toList());
+                                   .toList();
     }
 
     private void cleanup(final LocalDate day) {
@@ -85,9 +81,9 @@ class MeterstandHousekeeping {
             meterstandenInOneHour.remove(lastMeterstandInHour);
 
             if (LOGGER.isDebugEnabled()) {
-                LOGGER.debug("Keep first in hour {}: {}", firstMeterstandInHour.getDateTime().getHour(), ReflectionToStringBuilder.toString(firstMeterstandInHour, SHORT_PREFIX_STYLE));
-                LOGGER.debug("Keep last in hour {}: {}", lastMeterstandInHour.getDateTime().getHour(), ReflectionToStringBuilder.toString(lastMeterstandInHour, SHORT_PREFIX_STYLE));
-                meterstandenInOneHour.forEach(meterstand -> LOGGER.debug("Delete: {}", ReflectionToStringBuilder.toString(meterstand, SHORT_PREFIX_STYLE)));
+                LOGGER.debug("Keep first in hour {}: {}", firstMeterstandInHour.getDateTime().getHour(), firstMeterstandInHour);
+                LOGGER.debug("Keep last in hour {}: {}", lastMeterstandInHour.getDateTime().getHour(), lastMeterstandInHour);
+                meterstandenInOneHour.forEach(meterstand -> LOGGER.debug("Delete: {}", meterstand));
             }
 
             meterstandRepository.deleteAllInBatch(meterstandenInOneHour);
