@@ -8,7 +8,8 @@ import org.springframework.stereotype.Service;
 
 import javax.annotation.Nullable;
 import java.math.BigDecimal;
-import java.time.*;
+import java.time.Clock;
+import java.time.LocalDateTime;
 import java.time.temporal.ChronoUnit;
 import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
@@ -19,7 +20,6 @@ import static java.math.BigDecimal.ZERO;
 import static java.math.RoundingMode.HALF_UP;
 import static java.time.LocalDateTime.now;
 import static java.util.Comparator.comparing;
-import static java.util.stream.Collectors.toList;
 
 @Service
 public class IncomingKlimaatService {
@@ -105,7 +105,7 @@ public class IncomingKlimaatService {
         return recentlyAddedKlimaatsPerKlimaatSensorCode.getOrDefault(klimaatSensorCode, new ArrayList<>())
                                                         .stream()
                                                         .filter(klimaat -> klimaat.getDatumtijd().isAfter(from))
-                                                        .collect(toList());
+                                                        .toList();
     }
 
     @Nullable
@@ -142,16 +142,16 @@ public class IncomingKlimaatService {
 
     private List<BigDecimal> getValidHumidities(final List<Klimaat> klimaatList) {
         return klimaatList.stream()
-                          .filter(klimaat -> isValidKlimaatValue(klimaat.getLuchtvochtigheid()))
                           .map(Klimaat::getLuchtvochtigheid)
-                          .collect(toList());
+                          .filter(this::isValidKlimaatValue)
+                          .toList();
     }
 
     private List<BigDecimal> getValidTemperatures(final List<Klimaat> klimaatList) {
         return klimaatList.stream()
-                          .filter(klimaat -> isValidKlimaatValue(klimaat.getTemperatuur()))
                           .map(Klimaat::getTemperatuur)
-                          .collect(toList());
+                          .filter(this::isValidKlimaatValue)
+                          .toList();
     }
 
     private boolean isValidKlimaatValue(@Nullable final BigDecimal value) {
